Add README, enhanced quickstart vignette, and GitHub Actions workflows
- Create comprehensive README.md with badges, installation, quick start, and documentation
- Enhance quickstart.Rmd vignette with detailed examples, data schema docs, and visualization examples
- Add pkgdown.yaml workflow for automatic site deployment to gh-pages
- Add R-CMD-check.yaml workflow for CI testing
- Set eval=FALSE on all network-dependent code chunks for offline pkgdown builds
- Rebuild pkgdown site with updated content

--- a/vignettes/quickstart.Rmd
+++ b/vignettes/quickstart.Rmd
@@ -17,6 +17,10 @@ knitr::opts_chunk$set(
 )
 ```
 
+## Overview
+
+The `caschooldata` package provides tools for fetching and analyzing California school enrollment data from the California Department of Education (CDE). This vignette walks through the main features of the package.
+
 ## Installation
 
 Install from GitHub:
@@ -26,11 +30,13 @@ Install from GitHub:
 remotes::install_github("almartin82/caschooldata")
 ```
 
-## Quick Example
+## Fetching Enrollment Data
 
-Fetch the most recent year of California enrollment data:
+### Basic Usage
 
-```{r fetch-data}
+The main function is `fetch_enr()`, which downloads and processes enrollment data for a given school year:
+
+```{r fetch-data, eval=FALSE}
 library(caschooldata)
 library(dplyr)
 
@@ -40,48 +46,171 @@ enr <- fetch_enr(2024)
 head(enr)
 ```
 
-## Understanding the Data
+The `end_year` parameter refers to the spring semester year. For example, `end_year = 2024` fetches data for the 2023-24 school year.
 
-The data is returned in **tidy (long) format** by default:
+### Available Years
 
-- Each row is one subgroup for one school/district/county/state
-- `reporting_category` is the CDE demographic category code (e.g., "TA", "RE_H")
-- `subgroup` is the human-readable name (e.g., "total", "hispanic")
-- `grade_level` shows the grade ("TOTAL", "TK", "K", "01"-"12")
-- `n_students` is the enrollment count
-- `agg_level` indicates the level: T (State), C (County), D (District), S (School)
+Currently, the package supports Census Day enrollment data for:
 
-```{r data-structure}
+- **2024**: 2023-24 school year
+- **2025**: 2024-25 school year
+
+```{r years-example, eval=FALSE}
+# Fetch the most recent year
+enr_2025 <- fetch_enr(2025)
+
+# Fetch an earlier year
+enr_2024 <- fetch_enr(2024)
+```
+
+### Wide vs. Tidy Format
+
+By default, `fetch_enr()` returns data in **tidy (long) format**, which is ideal for analysis with dplyr and ggplot2:
+
+```{r tidy-format, eval=FALSE}
+# Default: tidy format
+enr_tidy <- fetch_enr(2024)
+names(enr_tidy)
+# Includes: grade_level, reporting_category, subgroup, n_students
+```
+
+For wide format (one column per grade), set `tidy = FALSE`:
+
+```{r wide-format, eval=FALSE}
+# Wide format: one column per grade
+enr_wide <- fetch_enr(2024, tidy = FALSE)
+names(enr_wide)
+# Includes: grade_tk, grade_k, grade_01, ..., grade_12, total_enrollment
+```
+
+### Fetching Multiple Years
+
+Use `fetch_enr_multi()` to download data for multiple years at once:
+
+```{r multi-year, eval=FALSE}
+# Fetch 2024 and 2025 data
+all_years <- fetch_enr_multi(c(2024, 2025))
+
+# Analyze enrollment trends
+all_years %>%
+  filter(is_state, subgroup == "total", grade_level == "TOTAL") %>%
+  select(end_year, n_students)
+```
+
+## Understanding the Data Schema
+
+### Column Descriptions
+
+The tidy enrollment data includes the following columns:
+
+| Column | Description |
+|--------|-------------|
+| `end_year` | School year end (e.g., 2024 for 2023-24) |
+| `academic_year` | Academic year string (e.g., "2023-24") |
+| `cds_code` | 14-digit County-District-School identifier |
+| `county_code` | 2-digit county code (01-58) |
+| `district_code` | 5-digit district code |
+| `school_code` | 7-digit school code |
+| `agg_level` | Aggregation level: T (State), C (County), D (District), S (School) |
+| `county_name` | County name |
+| `district_name` | District name |
+| `school_name` | School name |
+| `charter_status` | Y (Charter), N (Non-Charter), or All |
+| `grade_level` | Grade: TK, K, 01-12, or TOTAL |
+| `reporting_category` | CDE demographic category code |
+| `subgroup` | Human-readable subgroup name |
+| `n_students` | Enrollment count |
+| `is_state`, `is_county`, `is_district`, `is_school` | Boolean aggregation flags |
+| `is_charter` | Boolean charter indicator |
+
+### Aggregation Levels
+
+The data includes four aggregation levels:
+
+```{r agg-levels, eval=FALSE}
+# State-level totals
+state <- enr %>%
+  filter(agg_level == "T")
+# or equivalently:
+state <- enr %>%
+  filter(is_state)
+
+# County-level (58 California counties)
+counties <- enr %>%
+  filter(is_county)
+
+# District-level
+districts <- enr %>%
+  filter(is_district)
+
+# School-level
+schools <- enr %>%
+  filter(is_school)
+```
+
+### Demographic Subgroups
+
+The `reporting_category` column contains CDE codes, while `subgroup` provides human-readable names:
+
+| Category | Code | Subgroup Name |
+|----------|------|---------------|
+| Total | TA | total |
+| Race/Ethnicity | RE_H | hispanic |
+| Race/Ethnicity | RE_W | white |
+| Race/Ethnicity | RE_A | asian |
+| Race/Ethnicity | RE_B | black |
+| Race/Ethnicity | RE_F | filipino |
+| Race/Ethnicity | RE_P | pacific_islander |
+| Race/Ethnicity | RE_I | native_american |
+| Race/Ethnicity | RE_T | multiracial |
+| Gender | GN_F | female |
+| Gender | GN_M | male |
+| Gender | GN_X | nonbinary |
+| Student Groups | SG_EL | english_learner |
+| Student Groups | SG_DS | students_with_disabilities |
+| Student Groups | SG_SD | socioeconomically_disadvantaged |
+| Student Groups | SG_FS | foster_youth |
+| Student Groups | SG_HM | homeless |
+| Student Groups | SG_MG | migrant |
+
+```{r subgroups, eval=FALSE}
+# View all available subgroups
 enr %>%
-  filter(is_state) %>%
-  select(end_year, agg_level, subgroup, grade_level, n_students) %>%
-  head(10)
+  distinct(reporting_category, subgroup) %>%
+  arrange(reporting_category)
 ```
 
-## Filtering by Level
+### Grade Levels
 
-Use the aggregation flags to filter data:
-```{r filter-levels}
-# State totals
-state <- enr %>% filter(is_state, subgroup == "total", grade_level == "TOTAL")
-state %>% select(end_year, n_students)
+Individual grades range from Transitional Kindergarten (TK) through 12th grade:
 
-# All counties
-counties <- enr %>% filter(is_county, subgroup == "total", grade_level == "TOTAL")
-nrow(counties)
+```{r grades, eval=FALSE}
+# Available grade levels
+enr %>%
+  distinct(grade_level) %>%
+  arrange(grade_level)
 
-# All districts
-districts <- enr %>% filter(is_district, subgroup == "total", grade_level == "TOTAL")
-nrow(districts)
+# Filter to specific grades
+elementary <- enr %>%
+  filter(grade_level %in% c("TK", "K", "01", "02", "03", "04", "05"))
 
-# All schools
-schools <- enr %>% filter(is_school, subgroup == "total", grade_level == "TOTAL")
-nrow(schools)
+middle_school <- enr %>%
+  filter(grade_level %in% c("06", "07", "08"))
+
+high_school <- enr %>%
+  filter(grade_level %in% c("09", "10", "11", "12"))
 ```
 
-## Simple Analysis: Top 10 Districts
+## Filtering and Analysis Examples
 
-```{r top-districts}
+### Top 10 Largest Districts
+
+```{r top-districts, eval=FALSE}
+library(caschooldata)
+library(dplyr)
+
+enr <- fetch_enr(2024)
+
 enr %>%
   filter(is_district, subgroup == "total", grade_level == "TOTAL") %>%
   arrange(desc(n_students)) %>%
@@ -89,80 +218,148 @@ enr %>%
   head(10)
 ```
 
-## Demographic Breakdown
+### County-Level Analysis
 
-California enrollment data includes detailed demographic subgroups:
+```{r county-analysis, eval=FALSE}
+# Enrollment by county
+county_enrollment <- enr %>%
+  filter(is_county, subgroup == "total", grade_level == "TOTAL") %>%
+  arrange(desc(n_students)) %>%
+  select(county_name, n_students)
 
-```{r demographics}
-# State-level demographics for 2024
+# Top 5 counties
+head(county_enrollment, 5)
+```
+
+### Demographic Breakdown
+
+```{r demographics, eval=FALSE}
+# State-level race/ethnicity breakdown
 enr %>%
-  filter(is_state, grade_level == "TOTAL") %>%
-  select(subgroup, n_students) %>%
+  filter(
+    is_state,
+    grade_level == "TOTAL",
+    grepl("^RE_", reporting_category)
+  ) %>%
+  mutate(pct = n_students / sum(n_students) * 100) %>%
+  select(subgroup, n_students, pct) %>%
   arrange(desc(n_students))
 ```
 
-## Wide Format
+### Charter vs. Non-Charter Comparison
 
-If you prefer wide format (one column per grade), set `tidy = FALSE`:
-
-```{r wide-format}
-enr_wide <- fetch_enr(2024, tidy = FALSE)
-
-enr_wide %>%
-  filter(agg_level == "T") %>%
-  select(end_year, reporting_category, total_enrollment,
-         starts_with("grade_")) %>%
-  head(5)
-```
-
-## Historical Data
-
-Fetch multiple years to analyze trends:
-
-```{r multi-year, eval=FALSE}
-# Fetch multiple years of data
-years <- 2024:2025
-all_enr <- fetch_enr_multi(years)
-
-# State enrollment trend
-all_enr %>%
+```{r charter-comparison, eval=FALSE}
+# State-level charter enrollment
+charter_comparison <- enr %>%
   filter(is_state, subgroup == "total", grade_level == "TOTAL") %>%
-  select(end_year, n_students)
+  group_by(charter_status) %>%
+  summarize(total_enrollment = sum(n_students, na.rm = TRUE))
+
+charter_comparison
 ```
 
-## CDS Codes
+### Grade-Level Aggregations
+
+Use `enr_grade_aggs()` to create grade band summaries:
+
+```{r grade-aggs, eval=FALSE}
+# Create K-8, HS, K-12 aggregations
+grade_bands <- enr_grade_aggs(enr)
+
+# View state-level grade bands
+grade_bands %>%
+  filter(is_state) %>%
+  select(grade_level, n_students)
+```
+
+## Working with CDS Codes
 
 California uses a 14-digit County-District-School (CDS) code system:
 
-- 2 digits: County code (01-58, California's 58 counties)
-- 5 digits: District code
-- 7 digits: School code
+- **Positions 1-2**: County code (01-58)
+- **Positions 3-7**: District code (5 digits)
+- **Positions 8-14**: School code (7 digits)
 
-You can parse CDS codes using the `parse_cds_code()` function:
-
-```{r cds-codes}
-# Example: Parse a school's CDS code
+```{r cds-codes, eval=FALSE}
+# Parse a CDS code
 parse_cds_code("19647331932334")
+# Returns: list(county = "19", district = "64733", school = "1932334")
+
+# Filter to a specific district using CDS pattern
+lausd <- enr %>%
+  filter(grepl("^1964733", cds_code), is_school)
 ```
 
-## Visualization Example
+## Visualization Examples
 
-```{r visualization, eval=require("ggplot2")}
+### Bar Chart: Top Counties
+
+```{r viz-counties, eval=FALSE}
 library(ggplot2)
 
+enr <- fetch_enr(2024)
+
 # Top 10 counties by enrollment
-county_enr <- enr %>%
+top_counties <- enr %>%
   filter(is_county, subgroup == "total", grade_level == "TOTAL") %>%
   arrange(desc(n_students)) %>%
   head(10)
 
-ggplot(county_enr, aes(x = reorder(county_name, n_students), y = n_students)) +
+ggplot(top_counties, aes(x = reorder(county_name, n_students), y = n_students)) +
   geom_col(fill = "steelblue") +
   coord_flip() +
   scale_y_continuous(labels = scales::comma) +
   labs(
     title = "Top 10 California Counties by Enrollment",
+    subtitle = "2023-24 School Year",
     x = NULL,
+    y = "Total Enrollment"
+  ) +
+  theme_minimal()
+```
+
+### Demographic Composition
+
+```{r viz-demographics, eval=FALSE}
+library(ggplot2)
+
+# Race/ethnicity pie chart data
+race_data <- enr %>%
+  filter(
+    is_state,
+    grade_level == "TOTAL",
+    grepl("^RE_", reporting_category)
+  ) %>%
+  mutate(pct = n_students / sum(n_students)) %>%
+  select(subgroup, n_students, pct)
+
+ggplot(race_data, aes(x = "", y = pct, fill = subgroup)) +
+  geom_bar(stat = "identity", width = 1) +
+  coord_polar("y", start = 0) +
+  labs(title = "California Enrollment by Race/Ethnicity") +
+  theme_void() +
+  theme(legend.position = "right")
+```
+
+### Enrollment Trend (Multi-Year)
+
+```{r viz-trend, eval=FALSE}
+library(ggplot2)
+
+# Fetch multiple years
+all_years <- fetch_enr_multi(c(2024, 2025))
+
+# State enrollment over time
+state_trend <- all_years %>%
+  filter(is_state, subgroup == "total", grade_level == "TOTAL")
+
+ggplot(state_trend, aes(x = end_year, y = n_students)) +
+  geom_line(color = "steelblue", size = 1.5) +
+  geom_point(color = "steelblue", size = 3) +
+  scale_y_continuous(labels = scales::comma) +
+  labs(
+    title = "California K-12 Enrollment",
+    x = "School Year (End Year)",
     y = "Total Enrollment"
   ) +
   theme_minimal()
@@ -170,22 +367,30 @@ ggplot(county_enr, aes(x = reorder(county_name, n_students), y = n_students)) +
 
 ## Cache Management
 
-The package caches downloaded data locally to speed up repeated queries:
+The package caches downloaded data locally to avoid repeated downloads:
 
-```{r cache, eval=FALSE}
-# Check cache status
+```{r cache-management, eval=FALSE}
+# Check what's cached
 cache_status()
 
 # Clear cache for a specific year
 clear_enr_cache(2024)
 
-# Force fresh download (bypass cache)
+# Force a fresh download (bypass cache)
 enr_fresh <- fetch_enr(2024, use_cache = FALSE)
 ```
 
+The cache is stored in a user-specific application data directory (via `rappdirs`). Cached data persists between R sessions.
+
+## Data Quality Notes
+
+- Enrollment counts are based on **Census Day** (first Wednesday in October)
+- Some cells may be suppressed for privacy (small counts)
+- Charter and non-charter enrollments are reported separately
+- State and county totals may include students not assigned to specific schools
+
 ## Next Steps
 
-- Use `?fetch_enr` for full function documentation
-- See `?tidy_enr` for details on the tidy transformation
-- See `?id_enr_aggs` for aggregation level identification
-- See `?enr_grade_aggs` for grade-level aggregations (K-8, HS, K-12)
+- See the function reference for detailed documentation: `?fetch_enr`, `?tidy_enr`
+- Explore the [Data Quality QA vignette](data-quality-qa.html) for validation examples
+- Visit the [package website](https://almartin82.github.io/caschooldata/) for more resources
