--- a/vignettes/data-quality-qa.Rmd
+++ b/vignettes/data-quality-qa.Rmd
@@ -14,8 +14,7 @@ knitr::opts_chunk$set(
   warning = FALSE,
   fig.width = 8,
   fig.height = 5,
-  cache = TRUE,
-  eval = FALSE
+  cache = TRUE
 )
 ```
 
