--- a/vignettes/quickstart.Rmd
+++ b/vignettes/quickstart.Rmd
@@ -13,8 +13,7 @@ knitr::opts_chunk$set(
   message = FALSE,
   warning = FALSE,
   fig.width = 7,
-  fig.height = 4,
-  eval = FALSE
+  fig.height = 4
 )
 ```
 
