Add use_cache = TRUE to vignettes for reliable builds
Prevents vignette build failures from transient network issues by using
cached data during pkgdown builds. This makes documentation more reliable
and reduces load on state DOE servers.

--- a/vignettes/data-quality-qa.Rmd
+++ b/vignettes/data-quality-qa.Rmd
@@ -56,7 +56,7 @@ library(ggplot2)
 # Modern years (2024-2025) use Census Day files with all aggregation levels
 # NOTE: Limited to 2023-2024 to reduce memory usage for vignette building
 years <- c(2023, 2024)
-enr <- fetch_enr_multi(years)
+enr <- fetch_enr_multi(years, use_cache = TRUE)
 
 # Check what we got
 enr %>%
