--- a/vignettes/quickstart.Rmd
+++ b/vignettes/quickstart.Rmd
@@ -13,7 +13,8 @@ knitr::opts_chunk$set(
   message = FALSE,
   warning = FALSE,
   fig.width = 7,
-  fig.height = 4
+  fig.height = 4,
+  cache = TRUE
 )
 ```
 
